Sun Feb 18 17:10:00 1996  Tom Tromey  <tromey@creche.cygnus.com>

	* automake.in (handle_scripts): SCRIPTS no longer automatically
	cleaned.  Now possible to install scripts in pkgdatadir.
	($seen_canonical): New variable.
	(generate_makefile): Check for config.guess and config.sub here;
	fixes bug reported by Gord Matzigkeit.

	* Makefile.am (pkgdata_SCRIPTS): New variable.
	(CLEANFILES): New macro.

	* scripts-clean.am: Removed.

Sat Feb 17 00:15:20 1996  Tom Tromey  <tromey@creche.cygnus.com>

	* automake.in (am_install_var): Error if primary variable actually
	defined.
	(am_install_var): Skip elements that look like configure
	substitutions.
	(am_install_var): "EXTRA" is a valid prefix.
	(am_install_var): Push contents EXTRA_PRIMARY onto @result.
	(handle_merge_targets): Treat "all" target like "install".
	(handle_subdirs): Don't push all-recursive.

	* header.am (install-@DIR@HEADERS): Don't depend on all.
	* data.am (install-@DIR@DATA): Don't depend on all.
	* libraries.am (install-@DIR@LIBRARIES): Don't depend on all.
	* programs.am (install-@DIR@PROGRAMS): Don't depend on all.
	* scripts.am (install-@DIR@SCRIPTS): Don't depend on all.

	* automake.in (am_install_var): Push generated install targets
	onto @phony.

	* subdirs.am: No longer depend on Makefile and $(CONFIG_HEADER).
	* automake.in (handle_merge_targets): Correctly handle recursive
	calls of uninstall, install-exec, and install-data.
	(handle_merge_targets): Put Makefile, and possibly $config_name,
	onto @all.
	(handle_merge_targets): Push 'all' onto @install as appropriate.

Fri Feb 16 08:27:04 1996  Tom Tromey  <tromey@creche.cygnus.com>

	* automake.in (handle_configure): config.status is in
	$(top_builddir), not $(top_srcdir).  Reported by Anthony Green.

	* automake.in (scan_configure): Recognize (AC|fp)_FUNC_FNMATCH.

Thu Feb 15 09:12:45 1996  Tom Tromey  <tromey@creche.cygnus.com>

	* automake.in: (seen_prog_yacc): New variable.
	(scan_configure): Look for yacc.