@@ -643,6 +643,9 @@ sub handle_scripts
     $scripts_installed = &am_install_var ('scripts', 'SCRIPTS',
 					  'bin', 'sbin', 'libexec', 'pkgdata',
 					  'noinst');
+
+    # We really only want a boolean value.
+    $scripts_installed = 1 if $scripts_installed;
 }
 
 # Search a file for a "version.texi" Texinfo include.  Return the name
@@ -2387,8 +2390,12 @@ sub require_file
 		{
 		    system ('cp', $am_dir . '/' . $file, $fullfile);
 		}
+
+		# FIXME this is a hack.  Should have am_warn.
+		local ($save) = $exit_status;
 		&am_error
 		    ("required file \"$fullfile\" not found; installing");
+		$exit_status = $save;
 	    }
 	    else
 	    {
