@@ -5,7 +5,7 @@ AUTOMAKE_OPTIONS = gnits
 ## FIXME Ulrich has suggested implementing this in Automake.
 ## Perhaps he is right.
 TESTS = mdate.test vtexi.test acoutput.test instexec.test checkall.test \
-acoutnoq.test acouttbs.test libobj.test
+acoutnoq.test acouttbs.test libobj.test proginst.test
 
 DIST_OTHER = $(TESTS)
 
