@@ -1,0 +1,12 @@
+#! /bin/sh
+
+# Test for bug where when multiple scripts are installed,
+# the check for fp_PROG_INSTALL fails.
+
+. $srcdir/defs
+
+cat > Makefile.am << 'END'
+bin_SCRIPTS = zardoz qbert brownie
+END
+
+$AUTOMAKE
