@@ -1,3 +1,7 @@
+Mon Feb 19 10:22:22 1996  Tom Tromey  <tromey@creche.cygnus.com>
+
+	* proginst.test: New file.
+
 Tue Feb 13 11:54:39 1996  Tom Tromey  <tromey@creche.cygnus.com>
 
 	* libobj.test: New file.
