@@ -1,3 +1,13 @@
+Mon Feb 19 09:53:09 1996  Tom Tromey  <tromey@creche.cygnus.com>
+
+	* automake.in (handle_scripts): Ensure $scripts_installed set to
+	boolean value.  Test proginst.test.
+
+	* Makefile.am (installcheck-local): New target.
+
+	* automake.in (require_file): No error if missing file is
+	installed.
+
 Sun Feb 18 17:10:00 1996  Tom Tromey  <tromey@creche.cygnus.com>
 
 	* automake.in (handle_scripts): SCRIPTS no longer automatically
